--- a/brownflorentinproject2/index.html
+++ b/brownflorentinproject2/index.html
@@ -12,9 +12,9 @@ Where am I? How do I go on?
 	
 	 <pre> <a href="https://image.shutterstock.com/image-photo/underwater-sea-deeb-deep-blue-600w-1512728810.jpg">You could go here.</a> <a href="https://www.youtube.com/watch?v=yfhiEH2EkBI">You could stay where you are. </a> 
 <a href="indexpage1.html"
-<img src="images/rabbitb.png" width="552" height="1109" alt="bunny" class="rabbitb" onMouseOver="this.src='images/rabbitb'" /> </pre>
+<img src="images/rabbitb.png" width="552" height="1109" alt="bunny" class="rabbitb" onMouseOver="this.src='images/rabbitb.JPG'" /> </pre>
 	
-	<img src="images/rabbitc.png" width="1014" height="516" alt=""/> <img src="images/bunnya.jpg" width="2048" height="1458" alt=""/> 
+	<img src="images/rabbitc.PNG" width="1014" height="516" alt=""/> <img src="images/bunnya.jpg" width="2048" height="1458" alt=""/> 
 	
 	
 	
